# Lab3_Osman_El-Alawa

./: README (1).markdown  README.md  pyproject.toml  train.py
app/: main.py
app/data/: column_transformer.joblib  label_encoder.joblib  model.json
